# meeting-transcriptions

./: .gitignore  CODEOWNERS  README.md  app.py  assistant.py  audio_capture.py  build_transcribe_win64.bat  env.sample  env_utils.py  fastwhisper_transcribe.py  filter_phrases.txt  first_time_install_linux.sh  first_time_install_mac.sh  first_time_install_win.bat  go.sum  gui.py  logging_utils.py  openai_transcribe.py  pyproject.toml  run_transcribe_linux.sh  run_transcribe_mac.sh  run_transcribe_win.bat  segment.py  speaker_detection.py  summary_utils.py  transcribe.py  transcript_filter.py  transcript_store.py  transcription-20260529_133055.md  transcription-20260529_133436.md  transcription-20260701_100806.md  transcription-20260701_101106.md  transcription-20260701_112331.md  transcription-20260701_113638.md  transcription-20260701_120430.md  transcription-20260702_142737.md  transcription-20260706_144040.md  ui.py
.github/: copilot-instructions.md
.github/workflows/: tests.yml
.squad/: decisions.md  routing.md  team.md
.squad/casting/: history.json  registry.json
.squad/identity/: now.md  wisdom.md
cmd/transcribe/: console_other.go  console_windows.go  main.go
cmd/wasapi-loopback-recorder/: main_other.go  main_windows.go  options.go  options_test.go  (+4 more)
docs/: cross-platform-test-plan.md  qa-cross-compile-smoke.sh  windows-wasapi-sidecar-test-plan.md
tests/: test_assistant_concurrency.py  test_assistant_response_extraction.py  test_audio_capture.py  test_env_utils.py  test_summary_utils.py  test_transcript_filter.py
transcribe/: README.md  go.mod
(+60 files in other folders)
